--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -13,12 +13,12 @@ dependencies:
     sdk: flutter
   
   # Firebase
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  firebase_storage: ^11.6.0
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  firebase_storage: ^12.0.0
   
   # Audio recording
-  record: ^5.0.4
+  record: ^5.1.0
   path_provider: ^2.1.1
   
   # UI
@@ -27,6 +27,9 @@ dependencies:
   # Utilities
   uuid: ^4.3.3
   permission_handler: ^11.1.0
+
+dependency_overrides:
+  record_linux: ^1.0.0
 
 dev_dependencies:
   flutter_test:
